--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^8.1.7"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.27.1"
+pytest = "^7.4.4"
 
 [tool.poetry.scripts]
 zkstats-cli = "zkstats.cli:main"
