--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = ["Jern Kunpittaya", "Kevin Chia"]
 [tool.poetry.dependencies]
 python = "^3.9"
 ezkl = "9.1.0"
-torch = "^2.1.1"
+# fix torch version to 2.2.0 due to a weird issue when upgrading to 2.4.1
+torch = "2.2.0"
 requests = "^2.31.0"
 scipy = "^1.11.4"
 numpy = "^1.26.2"
@@ -15,7 +16,6 @@ matplotlib = "^3.8.2"
 statistics = "^1.0.3"
 onnx = "^1.15.0"
 click = "^8.1.7"
-six = "^1.16.0"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.27.1"
